<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="com.sourcey.materiallogindemo.ProfilesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/welcome_text"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"

        android:text="@string/profile_info_text"
        android:textStyle="bold" />
    <android.support.v7.widget.CardView
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardBackgroundColor="#F8F9F9"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:text="Name " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:tag="info-name"
                    android:contentDescription="info-name"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:text="Email " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:tag="info-email"
                    android:contentDescription="info-email"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:text="Address " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:tag="info-address"
                    android:contentDescription="info-address"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:textStyle="bold"
                    android:text="Mobile " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:tag="info-mobile"
                    android:contentDescription="info-mobile"
                    android:text="" />
            </LinearLayout>




        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:tag="btnLogout"
        android:text="Logout" />
</LinearLayout>