<resources>
    <string name="app_name">Material Login Example</string>

    <string name="hello_world">Hello world!</string>
    <string name="welcome_text">Welcome!</string>
    <string name="profile_info_text">User Information</string>
    <string name="menu_edit_profile">Update Profiles</string>
    <string name="menu_edit_password">Update Password</string>
    <string name="menu_ticket">Show Ticket</string>
    <string name="menu_logout">Logout</string>
</resources>
